provisioning/100_infrastructure/140_services/base/traefik-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
  - host: << example.com >>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000

  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
